# SPT_PatchCrc32

./: .gitignore  CopyReferences.py  Package.ps1  Package.py  README.md
References/: Crc32.cs  README.md
SPT_PatchCRC32.Plugin/: Plugin.cs  SPT_PatchCRC32.Plugin.csproj  SPT_PatchCRC32.Plugin.sln
crc32_dll/: CMakeLists.txt  CMakePresets.json
crc32_dll/cmake/: toolchain-mingw-clang.cmake
crc32_dll/src/: crc32_pclmulqdq.c
crc32_dll/src/internal/: crc32_braid_p.h  crc32_braid_tbl.h  crc32_pclmulqdq_tpl.h  x86_intrins.h  zbuild.h
crc32_dll/tests/csharp/: Crc32TestSuite.cs  Crc32TestSuite.csproj
